force-app/main/default/objects/Action__c/fields/Action_api_name__c.field-meta.xml
<CustomField>
    <fullName>Action_api_name__c</fullName>
    <label>Action api name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>