force-app/main/default/objects/Action__c/fields/Active_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Active_Workflow__c</fullName>
    <formula>Workflow__r.Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Workflow</label>
    <type>Checkbox</type>
</CustomField>