force-app/main/default/objects/Action__c/fields/Add_Eval_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_Eval_Date__c</fullName>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>