force-app/main/default/objects/Action__c/fields/Admission_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Admission_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>