force-app/main/default/objects/Action__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Workflow Tasks</relationshipLabel>
    <relationshipName>Workflow_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>