force-app/main/default/objects/Action__c/fields/Auth_Hours_Weekly__c.field-meta.xml
<CustomField>
    <fullName>Auth_Hours_Weekly__c</fullName>
    <label>Auth. Hours (Weekly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>