force-app/main/default/objects/Action__c/fields/Authorization_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Received_Date__c</fullName>
    <label>Authorization Received Date</label>
    <type>Date</type>
</CustomField>