force-app/main/default/objects/Action__c/fields/Collaboration_Status__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Status__c</fullName>
    <label>Collaboration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>