force-app/main/default/objects/Action__c/fields/Config_Action_Id__c.field-meta.xml
<CustomField>
    <fullName>Config_Action_Id__c</fullName>
    <label>Config_Action Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>