force-app/main/default/objects/Action__c/fields/Config_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Config_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Config_Workflow</label>
    <referenceTo>Config_Workflow__c</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>