force-app/main/default/objects/Action__c/fields/Confirm_Client_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Client_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Client Call Complete</label>
    <type>Checkbox</type>
</CustomField>