force-app/main/default/objects/Action__c/fields/Confirm_Intake_Complete__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Intake_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Intake Complete</label>
    <type>Checkbox</type>
</CustomField>