force-app/main/default/objects/Action__c/fields/Confirm_Qualification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Qualification_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Qualification Complete</label>
    <type>Checkbox</type>
</CustomField>