force-app/main/default/objects/Action__c/fields/Credible_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Credible_Profile_ID__c</fullName>
    <description>Peer ID</description>
    <inlineHelpText>Credible Peer ID</inlineHelpText>
    <label>Credible Profile ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>