force-app/main/default/objects/Action__c/fields/Credible_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>Credible_Profile_Link__c</fullName>
    <formula>IF(
  ISBLANK(Credible_Profile_ID__c),
  &quot;Please Enter Credible Profile ID&quot;,
  HYPERLINK(
    &quot;https://www.cbh3.crediblebh.com/client/my_cw_clients.asp?client_id=&quot; &amp; Credible_Profile_ID__c,
    &quot;Open Credible Profile&quot;,
    &quot;_blank&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credible Profile Link</label>
    <type>Text</type>
</CustomField>