force-app/main/default/objects/Action__c/fields/Forensics__c.field-meta.xml
<CustomField>
    <fullName>Forensics__c</fullName>
    <label>Forensics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In-Jail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>