force-app/main/default/objects/Action__c/fields/IRP_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>IRP_Completion_Date__c</fullName>
    <label>IRP Completion Date</label>
    <type>Date</type>
</CustomField>