force-app/main/default/objects/Action__c/fields/IRP_Date__c.field-meta.xml
<CustomField>
    <fullName>IRP_Date__c</fullName>
    <label>IRP Date</label>
    <type>DateTime</type>
</CustomField>