force-app/main/default/objects/Action__c/fields/IRP_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>IRP_Scheduled__c</fullName>
    <label>IRP Scheduled Date</label>
    <type>Date</type>
</CustomField>