force-app/main/default/objects/Action__c/fields/IRP_Specialist__c.field-meta.xml
<CustomField>
    <fullName>IRP_Specialist__c</fullName>
    <label>IRP Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>