force-app/main/default/objects/Action__c/fields/Is_action_opened__c.field-meta.xml
<CustomField>
    <fullName>Is_action_opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is action opened</label>
    <type>Checkbox</type>
</CustomField>