force-app/main/default/objects/Action__c/fields/Is_Manual_Action__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manual Action</label>
    <type>Checkbox</type>
</CustomField>