force-app/main/default/objects/Action__c/fields/Last_Contact_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date_Formula__c</fullName>
    <formula>Last_Contact_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>