force-app/main/default/objects/Action__c/fields/Last_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Status__c</fullName>
    <label>Last Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Left a VM</fullName>
            </value>
            <value>
                <fullName>Sent a text</fullName>
            </value>
            <value>
                <fullName>Mailed Letter</fullName>
            </value>
            <value>
                <fullName>Unable to Reach at Provided Number</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
                <isActive>false</isActive>
                <label>Not Available</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>