force-app/main/default/objects/Action__c/fields/Last_Contact_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Status_Formula__c</fullName>
    <formula>TEXT(Last_Contact_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Contact Status</label>
    <type>Text</type>
</CustomField>