force-app/main/default/objects/Action__c/fields/MA_ID__c.field-meta.xml
<CustomField>
    <fullName>MA_ID__c</fullName>
    <label>MA ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>