force-app/main/default/objects/Action__c/fields/Marked_Completed_During_Migration__c.field-meta.xml
<CustomField>
    <fullName>Marked_Completed_During_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked Completed During Migration</label>
    <type>Checkbox</type>
</CustomField>