force-app/main/default/objects/Action__c/fields/Must_Start_By__c.field-meta.xml
<CustomField>
    <fullName>Must_Start_By__c</fullName>
    <label>Must Start By</label>
    <type>Date</type>
</CustomField>