force-app/main/default/objects/Action__c/fields/NPI_Verified__c.field-meta.xml
<CustomField>
    <fullName>NPI_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPI Verified</label>
    <type>Checkbox</type>
</CustomField>