force-app/main/default/objects/Action__c/fields/Preference_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>Preference_Link_Token__c</fullName>
    <label>Preference Link Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>