force-app/main/default/objects/Action__c/fields/Preference_Link_Token_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Preference_Link_Token_Expiry_Date__c</fullName>
    <label>Preference Link Token Expiry Date</label>
    <type>Date</type>
</CustomField>