force-app/main/default/objects/Action__c/fields/Prioirity__c.field-meta.xml
<CustomField>
    <fullName>Prioirity__c</fullName>
    <label>Prioirity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>