force-app/main/default/objects/Action__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Workflow Tasks</relationshipLabel>
    <relationshipName>Workflow_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>