force-app/main/default/objects/Action__c/fields/Script_Uploaded_to_Credible__c.field-meta.xml
<CustomField>
    <fullName>Script_Uploaded_to_Credible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Script Uploaded to Credible</label>
    <type>Checkbox</type>
</CustomField>