force-app/main/default/objects/Action__c/fields/Status_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Completed_Date__c</fullName>
    <label>Status Completed Date</label>
    <type>DateTime</type>
</CustomField>