force-app/main/default/objects/Action__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workflow</label>
    <referenceTo>Workflow__c</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>