force-app/main/default/objects/Action__c/validationRules/Prevent_Owner_Change_When_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Owner_Change_When_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Status__c = &quot;Complete&quot;,
    ISCHANGED(OwnerId)
)</errorConditionFormula>
    <errorMessage>You cannot change the Owner once the status is marked as Complete.</errorMessage>
</ValidationRule>